--- a/EntitiFrameworkPrework/wwwroot/css/site.css
+++ b/EntitiFrameworkPrework/wwwroot/css/site.css
@@ -69,3 +69,19 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 60px;
+}
+table, th, td {
+    border: 1px solid black;
+    outline: 1px solid gray;
+}
+
+    table tr th {
+        width: 100px;
+        border: 2px solid black;
+    }
