Create routing paths for all assignments.

--- a/EntitiFrameworkPrework/Views/Shared/_Layout.cshtml
+++ b/EntitiFrameworkPrework/Views/Shared/_Layout.cshtml
@@ -22,7 +22,22 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BestTeam">Best Team</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FCTeams">FC Teams</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TeamsGoals">Teams with Goals</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TeamsMoreThanMatch">Teams with more Matches</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MostGoals">Match with most goals</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MatchesLastWeek">Matches played last week</a>
                         </li>
                     </ul>
                 </div>
