Implement function to display teams with more than one match played.

--- a/EntitiFrameworkPrework/Views/Home/TeamsGoals.cshtml
+++ b/EntitiFrameworkPrework/Views/Home/TeamsGoals.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TeamGoalsViewModel>
 @{
-    ViewData["Title"] = "Team with goals";
+    ViewData["Title"] = "Teams with goals";
 }
 
 <div class="text-center">
