--- a/EntitiFrameworkPrework/Views/Home/TeamsMoreThanMatch.cshtml
+++ b/EntitiFrameworkPrework/Views/Home/TeamsMoreThanMatch.cshtml
@@ -1,5 +1,22 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<TeamGoalsViewModel>
 @{
+    ViewData["Title"] = "Team played more matches";
 }
+
+<div class="text-center">
+    <h2 class="display-4">TEAMS WHICH PLAYED MORE MATCHES THAN ONE</h2>
+    <table>
+        <tr>
+            <th><strong>Name</strong></th>
+            <th><strong>Times played</strong></th>
+        </tr>
+        @foreach (var team in Model)
+        {
+            <tr>
+                <th>@team.name</th>
+                <th>@team.times_played</th>
+            </tr>
+
+        }
+    </table>
+</div>
