--- a/EntitiFrameworkPrework/Views/Home/BestTeam.cshtml
+++ b/EntitiFrameworkPrework/Views/Home/BestTeam.cshtml
@@ -1,5 +1,20 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Team
 @{
+    ViewData["Title"] = "Best team ever";
 }
+
+<div class="text-center">
+    <h2 class="display-4">BEST TEAM EVER</h2>
+    <table>
+        <tr>
+            <th><strong>Id</strong></th>
+            <th><strong>Country</strong></th>
+            <th><strong>City</strong></th>
+        </tr>
+            <tr>
+                <th>@Model.name</th>
+                <th>@Model.country</th>
+                <th>@Model.city</th>
+            </tr>
+    </table>
+</div>
